[package]
name = "rwarden"
description = "Rust bindings to the Bitwarden API"
version = "0.0.0"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
edition = "2018"
repository = "https://github.com/nn1ks/rwarden"
readme = "README.md"
license = "Apache-2.0 OR MIT"
categories = ["api-bindings"]
keywords = ["bitwarden", "api", "bindings", "password", "manager"]

[dependencies]
async-trait = "0.1.50"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_setters = "0.1.5"
displaydoc = "0.2.1"
reqwest = { version = "0.11.3", features = ["json"] }
rwarden_crypto = { path = "../rwarden_crypto" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_repr = "0.1.7"
thiserror = "1.0.25"
tokio = { version = "1.6.1", features = ["macros"] }
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
