[package]
name = "rwarden"
description = "Rust bindings to the Bitwarden API"
version = "0.0.0"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
edition = "2018"
repository = "https://github.com/nn1ks/rwarden"
readme = "README.md"
license = "Apache-2.0 OR MIT"
categories = ["api-bindings"]
keywords = ["bitwarden", "api", "bindings", "password", "manager"]

[dependencies]
async-stream = "0.3.2"
async-trait = "0.1.50"
chrono = { version = "0.4.19", features = ["serde"] }
derive_setters = "0.1.5"
futures = "0.3.16"
reqwest = { version = "0.11.4", features = ["json"] }
rwarden_crypto = { path = "../rwarden_crypto" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_repr = "0.1.7"
thiserror = "1.0.26"
tokio = { version = "1.9.0", features = ["macros", "fs"] }
typed-builder = "0.9.0"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]
rand = "0.8.4"

[features]
disable_vaultwarden_incompatible_tests = []
