[package]
name = "rwarden"
description = "Bitwarden API client"
version = "0.0.1"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
edition = "2018"
repository = "https://github.com/nn1ks/rwarden"
readme = "../README.md"
license = "Apache-2.0 OR MIT"
categories = ["api-bindings"]
keywords = ["bitwarden", "api", "password", "password-manager"]

[dependencies]
async-stream = "0.3.2"
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["serde"] }
derive_setters = "0.1.5"
futures-core = "0.3.17"
reqwest = { version = "0.11.4", features = ["json"] }
rsa = "0.5.0"
rwarden_crypto = { path = "../rwarden_crypto", version = "0.0.1" }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
serde_repr = "0.1.7"
thiserror = "1.0.26"
tokio = { version = "1.10.0", features = ["macros", "fs"] }
typed-builder = "0.9.1"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]
futures-util = "0.3.17"
rand = "0.8.4"

[features]
disable_vaultwarden_incompatible_tests = []
