[package]
name = "rwarden_crypto"
description = "Rust bindings to the Bitwarden API (crypto crate)"
version = "0.0.0"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
edition = "2018"
repository = "https://github.com/nn1ks/rwarden"
readme = "README.md"
license = "Apache-2.0 OR MIT"
categories = ["cryptography"]
keywords = ["bitwarden", "api", "bindings", "password", "manager"]

[dependencies]
aes = "0.6"
base64 = "0.13"
block-modes = "0.7"
displaydoc = "0.2"
generic-array = "0.14"
hkdf = { version = "0.10", features = ["std"] }
hmac = { version = "0.10", features = ["std"] }
pbkdf2 = { version = "0.7", default-features = false, features = ["std"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
sha2 = "0.9"
thiserror = "1"
