[package]
name = "rwarden_crypto"
description = "Bitwarden API client (crypto crate)"
version = "0.0.1"
authors = ["Niklas Sauter <niklas@n1ks.net>"]
edition = "2018"
repository = "https://github.com/nn1ks/rwarden"
readme = "README.md"
license = "Apache-2.0 OR MIT"
categories = ["cryptography"]
keywords = ["bitwarden", "api", "password", "password-manager"]

[dependencies]
aes = "0.7.5"
base64 = "0.13.0"
block-modes = "0.8.1"
generic-array = "0.14.4"
hkdf = { version = "0.11.0", features = ["std"] }
hmac = { version = "0.11.0", features = ["std"] }
pbkdf2 = { version = "0.9.0", default-features = false, features = ["std"] }
pkcs8 = "0.7.5"
rand = "0.8.4"
rsa = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_repr = "0.1.7"
sha-1 = "0.9.8"
sha2 = "0.9.6"
thiserror = "1.0.29"
